# mimo-creative-studio

./: .env.example  .gitignore  LICENSE  README.md  app.py  pyproject.toml
static/: app.js  style.css
templates/: index.html
